v 40.10 update: Duerer v3, Spacefox LeoCean v2, Ironhand add: Afro

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "Duerer"]
 	path = Duerer
 	url = https://fricy@github.com/fricy/Duerer.git
+[submodule "Afro"]
+	path = Afro
+	url = https://fricy@github.com/fricy/Afro-Graphics.git
